--- a/diligenciasinternacionalesinc/src/Styles/Carrucel.css
+++ b/diligenciasinternacionalesinc/src/Styles/Carrucel.css
@@ -1,3 +1,25 @@
+#carouselExampleDark {
+  width: 100%; /* Ocupa todo el ancho del contenedor */
+  height: 100%; /* Ocupa toda la altura del contenedor */
+}
+
+.carousel-inner {
+  width: 100%;
+  height: 100%; /* Asegura que el carrusel ocupe toda la altura del div1 */
+}
+
+.carousel-item {
+  width: 100%;
+  height: 100%; /* Cada slide ocupa el 100% del espacio */
+}
+
+.carousel-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ajusta la imagen para cubrir el espacio sin distorsionar */
+}
+
+/* Estilos para los controles del carrusel */
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
   background-color: rgba(0, 0, 0, 0.5);
