--- a/diligenciasinternacionalesinc/src/Styles/Carrucel.css
+++ b/diligenciasinternacionalesinc/src/Styles/Carrucel.css
@@ -1,11 +1,11 @@
 #carouselExampleDark {
   width: 100%; /* Ocupa todo el ancho del contenedor */
-  height: 100%; /* Ocupa toda la altura del contenedor */
+  height: 50vh; /* Reducimos la altura al 70% de la ventana */
 }
 
 .carousel-inner {
   width: 100%;
-  height: 100%; /* Asegura que el carrusel ocupe toda la altura del div1 */
+  height: 100%; /* Asegura que el carrusel ocupe toda la altura del contenedor */
 }
 
 .carousel-item {
